syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.personalized";

import "CommonRequest.proto";
import "ThreadInfo.proto";
import "AppPosInfo.proto";
import "Error.proto";

message PersonalizedRequestData {
  string ad_context_list = 30;
  string ad_ext_params = 37;
  AppPosInfo app_pos = 36;
  CommonRequest common = 1;
  string invoke_source = 29;
  uint32 load_type = 4;
  uint32 need_forumlist = 22;
  uint32 need_tags = 3;
  int32 new_install = 27;
  uint32 new_net_type = 23;
  uint32 page_thread_count = 5;
  uint32 pn = 6;
  int32 pre_ad_thread_count = 26;
  int32 q_type = 11;
  int32 request_times = 28;
  double scr_dip = 10;
  int32 scr_h = 9;
  int32 scr_w = 8;
  uint32 sug_count = 7;
  uint32 tag_code = 2;
}

message PersonalizedRequest {
  PersonalizedRequestData data = 1;
}

message PersonalizedResponseData {
  repeated ThreadInfo thread_list = 2;
  repeated ThreadPersonalized thread_personalized = 7;
}

message PersonalizedResponse {
  Error error = 1;
  PersonalizedResponseData data = 2;
}

message ThreadPersonalized {
  uint64 tid = 1;
  string weight = 2;
  string source = 3;
  repeated DislikeReason dislikeResource = 5;
  string extra = 6;
}

message DislikeReason {
  string dislikeReason = 1;
  uint32 dislikeId = 2;
  string extra = 3;
}