syntax = "proto3";

package tieba.userLike;

option java_package = "com.huanchengfly.tieba.post.api.models.protos.userLike";

import "CommonRequest.proto";
import "ThreadInfo.proto";
import "PbContent.proto";
import "Error.proto";
import "User.proto";

message UserLikeRequestData {
  CommonRequest common = 1;
  string pageTag = 2;
  uint64 lastRequestUnix = 3;
  int32 followType = 4;
  int32 loadType = 5;
}

message UserLikeRequest {
  UserLikeRequestData data = 1;
}

message UserLikeResponseData {
  repeated ConcernData threadInfo = 1;
  string pageTag = 2;
  int32 hasMore = 4;
  uint64 requestUnix = 10;
}

message UserLikeResponse {
  Error error = 1;
  UserLikeResponseData data = 2;
}

message ConcernData {
  ThreadInfo threadList = 1;
  PostData postData = 2;
  int32 recommendType = 3;
  int32 source = 4;
  repeated User recommendUserList = 5;
}

message PostData {
  uint64 id = 1;
  repeated PbContent content = 2;
  string postTitle = 3;
  User author = 4;
  uint64 time = 5;
}